--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       body {
         font-family: "JetBrains Mono", "Courier New", monospace;
-        background-color: #0a0a0a;
+        background-color: #000;
         color: #ff0000;
         line-height: 1.2;
         padding: 15px;
