--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       body {
         font-family: "JetBrains Mono", "Courier New", monospace;
         background-color: #000;
-        color: #ff0000;
+        color: #000;
         line-height: 1.2;
         padding: 15px;
         min-height: 100vh;
@@ -129,7 +129,7 @@
         <li class="file-item">
           <span class="file-prefix">-rw-r--r--</span>
           <a href="Cooler Master NovaTouch TKL.html" class="file-link"
-            >cooler_master_novatouch_tkl.html</a
+            >Cooler Master Novatouch TKL.html</a
           >
         </li>
         <li class="file-item">
@@ -143,19 +143,19 @@
         <li class="file-item">
           <span class="file-prefix">-rw-r--r--</span>
           <a href="Epson Business Full Keyboard.html" class="file-link"
-            >epson_business_full_keyboard.html</a
+            >Epson Business Full Keyboard.html</a
           >
         </li>
         <li class="file-item">
           <span class="file-prefix">-rw-r--r--</span>
           <a href="Fujitsu Axess MCR.html" class="file-link"
-            >fujitsu_axess_mcr.html</a
+            >Fujitsu Axess MCR.html</a
           >
         </li>
         <li class="file-item">
           <span class="file-prefix">-rw-r--r--</span>
           <a href="HHKB Professional.html" class="file-link"
-            >hhkb_professional.html</a
+            >HHKB Professional.html</a
           >
         </li>
         <li class="file-item">
