--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <a
             href="Dharmapoint Tactical Keyboard DRTCKB91UBK.html"
             class="file-link"
-            >dharmapoint_tactical_drtckb91ubk.html</a
+            >Dharmapoint Tactical Keyboard DRTCKB91UBK.html</a
           >
         </li>
         <li class="file-item">
